<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">KouChat</string>
  <string name="menu">Menu</string>
  <string name="quit">Quit</string>
  <string name="about">About</string>
  <string name="settings">Settings</string>
  <string name="about_text">
    \u0020Copyright 2006-2019 by Christian Ihle\n\n
    contact@kouchat.net\n
    https://www.kouchat.net\n
    https://www.facebook.com/kouchatapp\n\n
    Source available under the GNU LGPLv3:\n
    https://www.gnu.org/licenses/lgpl-3.0.txt
  </string>
  <string name="settings_nick_name_dialog_message">
    A nick name can have between 1 and 10 characters. Legal characters are:\n“a-z”, “0-9”, “-” and “_”.
  </string>
  <string name="settings_nick_name_title">Set nick name</string>
  <string name="settings_nick_name_key">nick_name</string>
  <string name="settings_nick_name_summary">Set your own nick name, so others can identify you in the chat.</string>
  <string name="settings_wake_lock_key">wake_lock</string>
  <string name="settings_wake_lock_title">Enable wake lock</string>
  <string name="settings_wake_lock_summary">
    Enable the wake lock to keep the device from sleeping while KouChat is running. Can help with timeout issues.
  </string>
  <string name="settings_own_color_key">own_color</string>
  <string name="settings_own_color_title">Set own message color</string>
  <string name="settings_own_color_summary">Set the color for your own messages.</string>
  <string name="settings_sys_color_key">sys_color</string>
  <string name="settings_sys_color_title">Set info message color</string>
  <string name="settings_sys_color_summary">Set the color for information messages.</string>
  <string name="settings_network_interface_key">network_interface</string>
  <string name="settings_network_interface_title">Network adapter</string>
  <string name="settings_network_interface_summary">Select the network adapter to use for sending and receiving messages. Choose Auto for automatic detection.</string>
  <string name="settings_network_interface_dialog_title">Network adapter</string>
  <string name="settings_network_interface_auto">Auto</string>

  <string name="settings_network_mode_key">network_mode</string>
  <string name="settings_network_mode_title">Network mode</string>
  <string name="settings_network_mode_summary">Multicast sends main chat over the multicast group. Broadcast sends it over subnet broadcast. Unicast sends it point-to-point without encryption. P2P uses an encrypted mesh with the peers you trust.</string>
  <string name="settings_network_mode_dialog_title">Network mode</string>
  <string name="settings_network_mode_multicast">Multicast</string>
  <string name="settings_network_mode_broadcast">Broadcast</string>
  <string name="settings_network_mode_unicast">Unicast (no encryption)</string>
  <string name="settings_network_mode_p2p">P2P (encrypted mesh)</string>

  <string name="main_chat_status_network_mode">Network: %1$s</string>
  <string name="main_chat_status_mode_multicast">Multicast</string>
  <string name="main_chat_status_mode_broadcast">Broadcast</string>
  <string name="main_chat_status_mode_unicast">Unicast</string>
  <string name="main_chat_status_mode_p2p">Encrypted (P2P)</string>
  <string name="main_chat_status_connected">Connected</string>
  <string name="main_chat_status_not_connected">Not connected</string>
  <string name="main_chat_status_connection_lost">Connection lost</string>

  <string name="trust_dialog_title">Trust encryption key?</string>
  <string name="trust_dialog_intro">%1$s wants to start an encrypted private chat.</string>
  <string name="trust_dialog_fingerprint_label">Key fingerprint (SHA-256):</string>
  <string name="trust_dialog_compare">Compare this fingerprint with %1$s out of band before trusting. If it matches, your conversation will be end-to-end encrypted and not broadcast.</string>
  <string name="trust_dialog_trust">Trust</string>
  <string name="trust_dialog_dont_trust">Don\'t Trust</string>
  <string name="settings_notification_open_external_title">Configure notifications</string>
  <string name="settings_notification_open_external_summary">Opens system-provided settings screen.</string>
  <string name="settings_notification_title">Notifications</string>
  <string name="settings_notification_light_key">notification_light</string>
  <string name="settings_notification_light_title">Enable light</string>
  <string name="settings_notification_sound_key">notification_sound</string>
  <string name="settings_notification_sound_title">Enable sound</string>
  <string name="settings_notification_vibration_key">notification_vibration</string>
  <string name="settings_notification_vibration_title">Enable vibration</string>
  <string name="settings_title">Settings</string>
  <string name="private_chat_title">User not found</string>
  <string name="error_nick_name_invalid">Invalid nick name</string>
  <string name="error_nick_name_in_use">The nick name is in use by someone else.</string>
  <string name="message_your_nick_name_changed">You changed nick to %s</string>
  <string name="notification_startup">KouChat is up and running</string>
  <string name="notification_running">Running</string>
  <string name="notification_new_message">New unread messages</string>
  <string name="notification_new_message_ticker">New message from %1$s</string>
  <string name="notification_new_private_message">New unread private messages</string>
  <string name="notification_new_private_message_ticker">New private message from %1$s</string>
  <string name="notification_main_chat">Main Chat</string>
  <string name="notification_new_file_transfer">New file transfer request</string>
  <string name="notification_file_transfer_from">File transfer from %1$s</string>
  <string name="notification_file_transfer_to">File transfer to %1$s</string>
  <string name="notification_waiting">Waiting</string>
  <string name="notification_connecting">Connecting</string>
  <string name="notification_receiving">Receiving</string>
  <string name="notification_sending">Sending</string>
  <string name="notification_completed">Completed</string>
  <string name="notification_failed">Failed</string>
  <string name="notification_receiving_file_from">Receiving %1$s from %2$s</string>
  <string name="notification_trust_title">Trust encryption key?</string>
  <string name="notification_trust_ticker">Verify the encryption key of %1$s</string>
  <string name="notification_trust_text">%1$s wants an encrypted connection. Tap to verify the key.</string>

  <string name="notifications_channel_id_service">service</string>
  <string name="notifications_channel_name_service">Service</string>
  <string name="notifications_channel_description_service">Notification displayed when the app is running.</string>

  <string name="notifications_channel_id_file_transfers">file_transfers</string>
  <string name="notifications_channel_name_file_transfers">File transfers</string>
  <string name="notifications_channel_description_file_transfers">Notifications about files being sent and received.</string>

  <string name="notifications_channel_id_main_chat_messages">main_chat_messages</string>
  <string name="notifications_channel_name_main_chat_messages">Main chat messages</string>
  <string name="notifications_channel_description_main_chat_messages">Notifications about new main chat messages.</string>

  <string name="notifications_channel_id_main_chat_away_messages">main_chat_away_messages</string>
  <string name="notifications_channel_name_main_chat_away_messages">Messages while away</string>
  <string name="notifications_channel_description_main_chat_away_messages">Notifications about new main chat messages, while away.</string>

  <string name="notifications_channel_id_private_chat_messages">private_chat_messages</string>
  <string name="notifications_channel_name_private_chat_messages">Private chat messages</string>
  <string name="notifications_channel_description_private_chat_messages">Notifications about new private chat messages.</string>

  <string name="cancel">Cancel</string>
  <string name="send_file">Send file</string>
  <string name="send_image">Send image</string>
  <string name="private_chat">Private chat</string>
  <string name="send_file_info">File name: %1$s \nFile size: %2$s</string>
  <string name="send_file_select_user">Please select the user to send the file to.</string>
  <string name="send_file_no_users">-- No connected users.</string>
  <string name="send_file_no_file">Unable to locate the file to send.</string>
  <string name="dialog_title_file_transfer_request">File transfer request</string>
  <string name="dialog_receive_file_accept_question">%1$s is trying to send you the file ‘%2$s’ (%3$s). Do you want to accept the file transfer?</string>
  <string name="dialog_receive_file_not_found">Unable to find the specified file transfer request.</string>
  <string name="receive_file_permission_denied">Permission to save file denied. Rejecting.</string>
  <string name="accept">Accept</string>
  <string name="reject">Reject</string>
  <string name="topic">Topic</string>
  <string name="topic_dialog_message">Set or change the current topic.</string>
  <string name="topic_dialog_enter_topic_hint">Enter topic</string>
  <string name="away">Away</string>
  <string name="go_away_dialog_message">Go away?</string>
  <string name="go_away_dialog_enter_away_message_hint">Enter away message</string>
  <string name="come_back_dialog_message">Come back from \'%1$s\'?</string>

</resources>
