<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings_title">

  <net.usikkert.kouchat.android.component.NickNameEditTextPreference
      android:key="@string/settings_nick_name_key"
      android:title="@string/settings_nick_name_title"
      android:summary="@string/settings_nick_name_summary"
      android:dialogTitle="@string/settings_nick_name_title"
      android:dialogMessage="@string/settings_nick_name_dialog_message"
      android:dialogIcon="@drawable/ic_dialog"/>

  <net.usikkert.kouchat.android.component.HoloColorPickerPreference
      android:key="@string/settings_own_color_key"
      android:title="@string/settings_own_color_title"
      android:summary="@string/settings_own_color_summary"
      android:defaultValue="-15987646"
      android:dialogTitle="@string/settings_own_color_title"
      android:dialogIcon="@drawable/ic_dialog"/>

  <net.usikkert.kouchat.android.component.HoloColorPickerPreference
      android:key="@string/settings_sys_color_key"
      android:title="@string/settings_sys_color_title"
      android:summary="@string/settings_sys_color_summary"
      android:defaultValue="-16759040"
      android:dialogTitle="@string/settings_sys_color_title"
      android:dialogIcon="@drawable/ic_dialog"/>

  <CheckBoxPreference
      android:widgetLayout="@layout/two_state_preference"
      android:key="@string/settings_wake_lock_key"
      android:title="@string/settings_wake_lock_title"
      android:summary="@string/settings_wake_lock_summary"/>

  <ListPreference
      android:key="@string/settings_network_interface_key"
      android:title="@string/settings_network_interface_title"
      android:summary="@string/settings_network_interface_summary"
      android:dialogTitle="@string/settings_network_interface_dialog_title"
      android:defaultValue=""
      android:negativeButtonText="@string/cancel"/>

  <ListPreference
      android:key="@string/settings_network_mode_key"
      android:title="@string/settings_network_mode_title"
      android:summary="@string/settings_network_mode_summary"
      android:dialogTitle="@string/settings_network_mode_dialog_title"
      android:entries="@array/network_mode_entries"
      android:entryValues="@array/network_mode_values"
      android:defaultValue="multicast"
      android:negativeButtonText="@string/cancel"/>

  <PreferenceCategory
      android:title="@string/settings_notification_title">

    <CheckBoxPreference
        android:widgetLayout="@layout/two_state_preference"
        android:key="@string/settings_notification_light_key"
        android:title="@string/settings_notification_light_title"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:widgetLayout="@layout/two_state_preference"
        android:key="@string/settings_notification_sound_key"
        android:title="@string/settings_notification_sound_title"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:widgetLayout="@layout/two_state_preference"
        android:key="@string/settings_notification_vibration_key"
        android:title="@string/settings_notification_vibration_title"
        android:defaultValue="true"/>

  </PreferenceCategory>

</PreferenceScreen>
